# castigate

./: .gitignore  PROJECT_DOCUMENTATION.md  castigatio.code-workspace  requirements.txt  start.sh
.github/: copilot-instructions.md
backend/: .gitignore  gem.md  main.py  requirements.txt
castigatio_backend/: .gitignore  gem.md  package-lock.json  pyproject.toml  requirements.txt  test_library_api.py
castigatio_backend/app/: main.py
castigatio_backend/app/api/: citation.py  ingestion.py  library.py  rag.py  status.py  system.py  xai.py
castigatio_backend/app/core/: config.py
castigatio_backend/app/models/: citation.py  ingestion.py  library.py  performance.py  query.py  rag.py  status.py  xai.py
castigatio_backend/app/services/: cache_service.py  citation_service.py  ingestion_service.py  learning_service.py  library_service.py  quality_service.py  query_enhancer_service.py  rag_service.py  xai_service.py
castigatio_backend/tests/: test_cache_service.py  test_citation_service.py  test_learning_service.py  test_library_api.py  test_library_service.py  test_performance_models.py  test_quality_service.py  test_query_enhancer_service.py  test_rag_service.py
castigatio_frontend/: README.md  package-lock.json  package.json  tailwind.config.js
temp_scripts/: adaptive_learning_system.py  advanced_ocr.py  advanced_pdf_analysis.py  advanced_retrieval_engine.py  answer_quality_system.py  app.py  auto_optimizing_system.py  enhanced_jura_app.py  explainable_ai_dashboard.py  ingest.py  intelligent_caching_system.py  jura_hauptapp.py  juristische_zitation_validator.py  (+19 more)
(+13 files in other folders)
