[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "T20", "Q", "RUF"]
ignore = []
exclude = ["__pycache__", ".venv", "build", "dist"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["__pycache__", ".venv", "build", "dist"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
